Better example code

--- a/examples/next-forms/app/global.css
+++ b/examples/next-forms/app/global.css
@@ -24,6 +24,7 @@ input[type='text'] {
   box-sizing: border-box;
   margin-bottom: 10px;
   border-radius: 4px;
+  outline-offset: 4px;
 }
 
 button {
@@ -35,10 +36,16 @@ button {
   cursor: pointer;
   width: 100%;
   font-size: 16px;
+  outline-offset: 4px;
 }
 
 button:hover {
   opacity: 0.8;
+}
+
+button[aria-disabled='true'] {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
 
 ul {
@@ -55,4 +62,16 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
